fixed intro alignment

--- a/page.css
+++ b/page.css
@@ -183,22 +183,18 @@ header{
 
 .intro{
     color: whitesmoke;
-    margin-bottom: 130px;
-    margin-right: 150px;
     font-size: 50px;
     top: 100%;
-    left: 2%;
+ 
     display:flex;
     transition: all .50s ease;
-    padding-left: 560px;
-    padding-top: 350px;
-    width: 270px;
     height: 100vh;
     background-color:#0f082a;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     width: 100%;
     font-family: monospace;
+    align-items: center;
 
 }
 
@@ -214,15 +210,13 @@ header{
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     font-size: 15px;
-    margin-left: 780px;
     font-family: monospace;
     color: #d1bdec;
-    top: auto;
     border: 2px solid;
     position: absolute;
     top: 65%;
-    transform: translate(-50%, -50%);
     padding: 10px;
+    text-align: center;
 }
 @keyframes fadeInAnimation {
     0% {
@@ -366,6 +360,7 @@ section{
     padding-top: 20px;
     padding-right: 20px;
     padding-left: 20px;
+
 }
 
 
